--- a/.github/workflows/update_version.yml
+++ b/.github/workflows/update_version.yml
@@ -175,7 +175,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install "mkdocs-material[imaging]>=9.5.38" "mkdocstrings[python]>=0.26.1" "mike>=2.1.3" "mkdocs-git-revision-date-localized-plugin>=1.2.9" "mkdocs-git-committers-plugin-2>=2.3.0"
+          pip install "mkdocs-material[imaging]>=9.5.38" "mkdocstrings[python]>=0.26.1" "mike>=2.1.3"
 
       - name: Publish documentation
         run: mike deploy --push --update-aliases ${{ steps.get_version.outputs.VERSION }} latest
