--- a/.github/workflows/update_version.yml
+++ b/.github/workflows/update_version.yml
@@ -80,7 +80,7 @@ jobs:
       contents: write
       id-token: write
 
-    if: github.event.inputs.publish == true
+    if: github.event.inputs.publish
 
     steps:
       - name: Checkout repository
@@ -147,6 +147,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - update-version
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout repository
