--- a/.github/workflows/update_version.yml
+++ b/.github/workflows/update_version.yml
@@ -105,6 +105,8 @@ jobs:
             cd ${{ github.event.inputs.package }} && rye build && cd ..
           fi
 
+      # TODO: Run tests
+
       # Get the new version with rye version and save it as an variable
       - name: Get new version
         id: get_version
@@ -133,11 +135,6 @@ jobs:
           release_name: Release ${{ steps.get_version.outputs.VERSION }}
           draft: false
           prerelease: false
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: dist
-          path: dist/*.{whl,tar.gz}
 
   build-and-publish-docs:
     runs-on: ubuntu-latest
@@ -173,7 +170,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install "mkdocs-material[imaging]>=9.5.38" "mkdocstrings[python]>=0.26.1" "mike>=2.1.3"
+          pip install "mkdocs-material[imaging]>=9.5.38" "mkdocstrings[python]>=0.26.1" "mike>=2.1.3" "mkdocs-git-revision-date-localized-plugin>=1.2.9" "mkdocs-git-committers-plugin-2>=2.3.0"
 
       - name: Publish documentation
         run: mike deploy --push --update-aliases ${{ steps.get_version.outputs.VERSION }} latest
