--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ dev-dependencies = [
     "mkdocs-material[imaging]>=9.5.38",
     "mike>=2.1.3",
     "mkdocstrings[python]>=0.26.1",
+    "mkdocs-git-revision-date-localized-plugin>=1.2.9",
+    "mkdocs-git-committers-plugin-2>=2.3.0",
 ]
 
 [tool.rye.workspace]
