--- a/darts-segmentation/pyproject.toml
+++ b/darts-segmentation/pyproject.toml
@@ -6,6 +6,7 @@ dependencies = [
     "numpy>=1.26.3, <2",
     "xarray>=2024.9.0",
     "h5netcdf>=1.3.0",
+    "segmentation-models-pytorch>=0.3.4",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
