--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,9 @@
 name = "darts-nextgen"
 version = "0.2.0"
 description = "Panarctic Database of Active Layer Detatchment Slides and Retrogressive Thaw Slumps from Deep Learning on High Resolution Satellite Imagery."
-dependencies = []
+dependencies = [
+    "segmentation-models-pytorch>=0.3.4",
+]
 readme = "README.md"
 requires-python = ">= 3.11"
 authors = [
@@ -18,7 +20,8 @@ managed = true
 virtual = true
 dev-dependencies = [
     "ipykernel>=6.29.5",
-    "noise>=1.2.2", # Used for generating random data, may delete in future
+    "noise>=1.2.2",
+    # Used for generating random data, may delete in future
     "matplotlib>=3.9.2",
     "ruff>=0.6.8",
     "mkdocs>=1.6.1",
@@ -27,6 +30,7 @@ dev-dependencies = [
     "mkdocstrings[python]>=0.26.1",
     "mkdocs-git-revision-date-localized-plugin>=1.2.9",
     "mkdocs-git-committers-plugin-2>=2.3.0",
+    "pyright>=1.1.384",
 ]
 
 [tool.rye.workspace]
