--- a/darts-export/pyproject.toml
+++ b/darts-export/pyproject.toml
@@ -4,11 +4,12 @@ version = "0.1.0"
 description = "Dataset export for the DARTS dataset."
 dependencies = [
     "numpy>=1.26.3, <2",
-    "xarray>=2024.9.0",
+    "xarray>=2024",
     "rasterio>=1.4.0",
     "rioxarray>=0.17.0",
     "h5netcdf>=1.3.0",
     "geopandas>=1.0.1",
+    "pytest"
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
