--- a/darts-ensemble/pyproject.toml
+++ b/darts-ensemble/pyproject.toml
@@ -6,6 +6,7 @@ dependencies = [
     "numpy>=1.26.3, <2",
     "xarray>=2024.9.0",
     "h5netcdf>=1.3.0",
+    "lovely-tensors>=0.1.17",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
