--- a/darts-preprocessing/pyproject.toml
+++ b/darts-preprocessing/pyproject.toml
@@ -6,6 +6,7 @@ dependencies = [
     "numpy>=1.26.3, <2",
     "xarray>=2024.9.0",
     "h5netcdf>=1.3.0",
+    "scipy>=1.14.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
