Update segmentation to work with new data format
Improve code structure of segmentation

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ notebooks/playground.ipynb
 # Rye requirement.lock files since they are different anyway
 requirements.lock
 requirements-dev.lock
+
+# Editor files
+.vscode/
