--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dev-dependencies = [
     "mkdocs-git-revision-date-localized-plugin>=1.2.9",
     "mkdocs-git-committers-plugin-2>=2.3.0",
     "pyright>=1.1.384",
+    "pytest>=8",
 ]
 
 [tool.rye.workspace]
