--- a/darts-export/pyproject.toml
+++ b/darts-export/pyproject.toml
@@ -43,3 +43,6 @@ extend = "../pyproject.toml"
 
 [tool.ruff.lint.per-file-ignores]
 "test/*" = ["D1"]
+
+[tool.ruff.lint.pep8-naming]
+extend-ignore-names = ["test_*"]
