--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: DARTS nextgen
 site_url: https://awi-response.github.io/darts-nextgen
 site_author: Tobias Hölzer
 site_description: >
-  Panarctic Database of Active Layer Detatchment Slides and Retrogressive Thaw Slumps from Deep Learning on High Resolution Satellite Imagery.
+  Panarctic Database of Active Layer Detachment Slides and Retrogressive Thaw Slumps from Deep Learning on High Resolution Satellite Imagery.
 
 repo_name: darts-nextgen
 repo_url: https://github.com/awi-response/darts-nextgen
