--- a/darts-export/pyproject.toml
+++ b/darts-export/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "rioxarray>=0.17.0",
     "h5netcdf>=1.3.0",
     "geopandas>=1.0.1",
+    "scikit-image>=0.20",
+    "shapely>=2.0.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
