--- a/darts-postprocessing/pyproject.toml
+++ b/darts-postprocessing/pyproject.toml
@@ -2,6 +2,9 @@
 name = "darts-postprocessing"
 version = "0.1.0"
 description = "Postprocessing steps for the DARTS dataset."
+dependencies = []
+readme = "README.md"
+requires-python = ">= 3.11"
 authors = [
     { name = "Ingmar Nitze", email = "ingmar.nitze@awi.de" },
     { name = "Konrad Heidler", email = "k.heidler@tum.de" },
@@ -9,12 +12,6 @@ authors = [
     { name = "Tobias Hölzer", email = "tobias.hoelzer@awi.de" },
     { name = "Lucas von Chamier", email = "lucas.chamier@awi.de" }
 ]
-dependencies = [
-    "numpy>=1.26.3, <2",
-    "xarray>=2024.9.0",
-]
-readme = "README.md"
-requires-python = ">= 3.11"
 
 [build-system]
 requires = ["hatchling"]
