--- a/darts-acquisition/pyproject.toml
+++ b/darts-acquisition/pyproject.toml
@@ -2,13 +2,7 @@
 name = "darts-acquisition"
 version = "0.1.0"
 description = "Acquisition of data from various sources for the DARTS dataset."
-dependencies = [
-    "numpy>=1.26.3, <2",
-    "xarray>=2024.9.0",
-    "rasterio>=1.4.0",
-    "rioxarray>=0.17.0",
-    "h5netcdf>=1.3.0",
-]
+dependencies = []
 readme = "README.md"
 requires-python = ">= 3.11"
 authors = [
