--- a/darts-ensemble/pyproject.toml
+++ b/darts-ensemble/pyproject.toml
@@ -2,12 +2,7 @@
 name = "darts-ensemble"
 version = "0.1.0"
 description = "Inference and model ensembling for the DARTS dataset."
-dependencies = [
-    "numpy>=1.26.3, <2",
-    "xarray>=2024.9.0",
-    "h5netcdf>=1.3.0",
-    "lovely-tensors>=0.1.17",
-]
+dependencies = []
 readme = "README.md"
 requires-python = ">= 3.11"
 authors = [
@@ -18,21 +13,6 @@ authors = [
     { name = "Lucas von Chamier", email = "lucas.chamier@awi.de" }
 ]
 
-[project.optional-dependencies]
-cpu = ["torch==2.2.0+cpu", "torchvision==0.17.0+cpu"]
-cuda11 = [
-    "torch==2.2.0+cu118",
-    "torchvision==0.17.0+cu118",
-    "cupy-cuda11x>=13.3.0",
-    "cucim-cu11>=24.8.0",
-]
-cuda12 = [
-    "torch==2.2.0+cu121",
-    "torchvision==0.17.0+cu121",
-    "cupy-cuda12x>=13.3.0",
-    "cucim-cu12==24.8.*",
-]
-
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
@@ -40,22 +20,6 @@ build-backend = "hatchling.build"
 [tool.rye]
 managed = true
 dev-dependencies = []
-
-[[tool.rye.sources]]
-name = "nvidia"
-url = "https://pypi.nvidia.com"
-
-[[tool.rye.sources]]
-name = "pytorch-cpu"
-url = "https://download.pytorch.org/whl/cpu"
-
-[[tool.rye.sources]]
-name = "pytorch-cu11"
-url = "https://download.pytorch.org/whl/cu118"
-
-[[tool.rye.sources]]
-name = "pytorch-cu12"
-url = "https://download.pytorch.org/whl/cu121"
 
 [tool.hatch.metadata]
 allow-direct-references = true
