--- a/darts-export/pyproject.toml
+++ b/darts-export/pyproject.toml
@@ -2,16 +2,7 @@
 name = "darts-export"
 version = "0.1.0"
 description = "Dataset export for the DARTS dataset."
-dependencies = [
-    "numpy>=1.26.3, <2",
-    "xarray>=2024.9.0",
-    "rasterio>=1.4.0",
-    "rioxarray>=0.17.0",
-    "h5netcdf>=1.3.0",
-    "geopandas>=1.0.1",
-    "scikit-image>=0.20",
-    "shapely>=2.0.0",
-]
+dependencies = []
 readme = "README.md"
 requires-python = ">= 3.11"
 authors = [
@@ -21,14 +12,6 @@ authors = [
     { name = "Tobias Hölzer", email = "tobias.hoelzer@awi.de" },
     { name = "Lucas von Chamier", email = "lucas.chamier@awi.de" }
 ]
-
-[project.optional-dependencies]
-test = ["pytest"]
-gdal39 = ["gdal==3.9.2"]
-gdal38 = ["gdal==3.8.5"]
-gdal384 = ["gdal==3.8.4"]
-gdal37 = ["gdal==3.7.3"]
-gdal36 = ["gdal==3.6.4"]
 
 [build-system]
 requires = ["hatchling"]
@@ -47,9 +30,3 @@ packages = ["src/darts_export"]
 [tool.ruff]
 # Extend the `pyproject.toml` file in the parent directory...
 extend = "../pyproject.toml"
-
-[tool.ruff.lint.per-file-ignores]
-"test/*" = ["D1"]
-
-[tool.ruff.lint.pep8-naming]
-extend-ignore-names = ["test_*"]
