--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,8 @@ dev-dependencies = [
     "pyright>=1.1.384",
     "pytest>=8",
     "ipywidgets>=8.1.5",
+    "folium>=0.17.0",
+    "mapclassify>=2.8.1",
 ]
 
 [tool.rye.workspace]
