Add a s2 pipeline (not fully tested!)

--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@
 ee-project = "your-project-here"
 
 [darts.paths]
+sentinel2-dir = "data/input/sentinel2"
 orthotiles-dir = "data/input/planet/PSOrthoTile"
 scenes-dir = "data/input/planet/PSScene"
 output-data-dir = "data/output"
