--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,13 +18,20 @@ dependencies = [
     "rioxarray>=0.17.0",
     "geopandas>=1.0.1",
     "shapely>=2.0.0",
+    "earthengine-api>=1.1.5",
+    "xee>=0.0.19",
+    "pystac>=1.11.0",
+    "xpystac>=0.1.3",
+    "boto3>=1.35.54",
+    "odc-geo>=0.4.8",
+    "zarr[jupyter]>=2.18.3",
     # Training and Inference
     "segmentation-models-pytorch>=0.3.4",
     # Processing
     "scikit-image>=0.20",
     "scipy>=1.14.1",
-    "earthengine-api>=1.1.5",
-    "xee>=0.0.19",
+    "xarray-spatial>=0.4.0",
+    "dask>=2024.11.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
