--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,6 @@ dependencies = [
     "odc-geo>=0.4.8",
     "odc-stac[botocore]>=0.3.10",
     "zarr[jupyter]>=2.18.3",
-    "cartopy>=0.24.1",
     # Training and Inference
     "segmentation-models-pytorch>=0.3.4",
     # Processing
@@ -33,6 +32,14 @@ dependencies = [
     "scipy>=1.14.1",
     "xarray-spatial>=0.4.0",
     "dask>=2024.11.0",
+    # Visualization
+    "cartopy>=0.24.1",
+    "hvplot>=0.11.1",
+    "geoviews>=1.13.0",
+    "datashader>=0.16.3",
+    "folium>=0.18.0",
+    "bokeh>=3.5.2",
+    "jupyter-bokeh>=4.0.5",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
