--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "folium>=0.18.0",
     "bokeh>=3.5.2",
     "jupyter-bokeh>=4.0.5",
+    "setuptools>=75.5.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
@@ -56,14 +57,18 @@ cpu = ["torch==2.2.0+cpu", "torchvision==0.17.0+cpu"]
 cuda11 = [
     "torch==2.2.0+cu118",
     "torchvision==0.17.0+cu118",
-    "cupy-cuda11x>=13.3.0",
     "cucim-cu11>=24.8.0",
+    "cupy>=13.3.0",
+    "cupy-xarray>=0.1.4",
+    "cuda-python>=12.6.2.post1",
 ]
 cuda12 = [
     "torch==2.2.0+cu121",
     "torchvision==0.17.0+cu121",
-    "cupy-cuda12x>=13.3.0",
     "cucim-cu12==24.8.*",
+    "cupy>=13.3.0",
+    "cupy-xarray>=0.1.4",
+    "cuda-python>=12.6.2.post1",
 ]
 gdal393 = ["gdal==3.9.3"]
 gdal39 = ["gdal==3.9.2"]
