--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ dependencies = [
     # Processing
     "scikit-image>=0.20",
     "scipy>=1.14.1",
+    "setuptools>=75.6.0",
+    "pytorch-wavelets>=1.3.0",
+    "pywavelets>=1.7.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
