--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "xpystac>=0.1.3",
     "odc-geo>=0.4.8",
     "odc-stac[botocore]>=0.3.10",
+    "toml>=0.10.2",
     "zarr[jupyter]>=2.18.3",
     # Training and Inference
     "segmentation-models-pytorch>=0.3.4",
@@ -32,6 +33,7 @@ dependencies = [
     "scipy>=1.14.1",
     "xarray-spatial>=0.4.0",
     "dask>=2024.11.0",
+    "geocube>=0.7.0",
     # Visualization
     "cartopy>=0.24.1",
     "hvplot>=0.11.1",
