--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,10 @@ dependencies = [
     "bokeh>=3.5.2",
     "jupyter-bokeh>=4.0.5",
     "setuptools>=75.5.0",
+    "lightning>=2.4.0",
+    "albumentations>=1.4.21",
+    "wandb>=0.18.7",
+    "torchmetrics>=1.6.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
