full paths for directories in run_native specify project tcvis dir

--- a/planet_config.toml
+++ b/planet_config.toml
@@ -1,7 +1,9 @@
 [darts]
-orthotiles-dir = "data/input/planet/PSOrthoTile"
-scenes-dir = "data/input/planet/PSScene"
-arcticdem-slope-vrt = "data/input/ArcticDEM/slope.vrt"
-arcticdem-elevation-vrt = "data/input/ArcticDEM/elevation.vrt"
-output-data-dir = "data/output"
-model-dir = "models"
+orthotiles-dir = "/home/toddn/pdg/darts-nextgen/rts_dtaset01/input/planet/PSOrthoTile"
+scenes-dir = "/home/toddn/pdg/darts-nextgen/rts_dtaset01/input/planet/PSScene"
+arcticdem-slope-vrt = "/home/toddn/pdg/darts-nextgen/rts_dtaset01/input/ArcticDEM/slope.vrt"
+arcticdem-elevation-vrt = "/home/toddn/pdg/darts-nextgen/rts_dtaset01/input/ArcticDEM/elevation.vrt"
+output-data-dir = "/home/toddn/pdg/darts-nextgen/data/output"
+model-dir = "/home/toddn/pdg/darts-nextgen/rts_dtaset01/models"
+tcvis-dir= "/home/toddn/pdg/darts-nextgen/tcvis_dir"
+ee-project = "pdg-project-406720"
