--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ dependencies = [
     "wandb>=0.18.7",
     "torchmetrics>=1.6.0",
     "seaborn>=0.13.2",
+    "distributed>=2024.12.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
