--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ dependencies = [
     "bokeh>=3.5.2",
     "jupyter-bokeh>=4.0.5",
     "seaborn>=0.13.2",
+    "optuna>=4.1.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
