--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,11 +28,13 @@ dependencies = [
     "toml>=0.10.2",
     "zarr[jupyter]>=2.18.3",
     # Training and Inference
-    "segmentation-models-pytorch>=0.3.4",
+    "segmentation-models-pytorch>=0.4.0",
     "lightning>=2.4.0",
     "albumentations>=1.4.21",
     "wandb>=0.18.7",
+    "optuna>=4.1.0",
     "torchmetrics>=1.6.0",
+    "timm>=1.0.13",
     # Processing
     "scikit-image>=0.20",
     "scipy>=1.14.1",
@@ -49,7 +51,6 @@ dependencies = [
     "bokeh>=3.5.2",
     "jupyter-bokeh>=4.0.5",
     "seaborn>=0.13.2",
-    "optuna>=4.1.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
