new env run sentinel tests for running nohup jobs

--- a/darts_albedo_environment.yml
+++ b/darts_albedo_environment.yml
@@ -1,6 +1,8 @@
-name: darts_albedo
+name: darts_albedo_env
 channels:
   - conda-forge
+  - pytorch
+  - nvidia
 dependencies:
   - python=3.11
   - pip
