--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,11 @@
-name: darts_albedo
+name: darts_albedo_2
 channels:
   - conda-forge
   - pytorch
   - nvidia
 dependencies:
   - python=3.11
+  - pip
   - numpy[version='>=1.26.3,<2']
   - xarray[version='>=2024.9.0']
   - rich[version='>=13.9.2']
@@ -43,13 +44,11 @@ dependencies:
   - cupy-xarray
   - fastrlock
   - xpystac
-  - cupy
   - toml
   - lightning
   - ipykernel
   - pip:
       - cucim-cu12==24.10.0
-      - cupy-cuda12x==13.3.0
       - fastrlock==0.8.2
       - msgpack==1.1.0
       - ray==2.37.0
